--- a/common_core/build.gradle
+++ b/common_core/build.gradle
@@ -183,5 +183,10 @@ dependencies {
     //崩溃SpiderMan
     debugApi 'com.simple:spiderman:1.0.8'
     releaseApi 'com.simple:spiderman-no-op:1.0.8'
+    //高德定位
     api project(':common_amap_location')
+    //更新
+    api 'com.allenliu.versionchecklib:library:2.2.0'
+    //Gson
+    api 'com.google.code.gson:gson:2.8.5'
 }
