--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-include ':example', ':common_tencent_tuikit', ':mobshareplatform', ':baidutext', ':common_amap_location',
+include ':Main', ':common_tencent_tuikit', ':mobshareplatform', ':baidutext', ':common_amap_location',
         ':common_annotations', ':common_compiler', ':common_core', ':common_bokang', ':common_ui',
         ':common_rongim', ':CallLib', ':IMLib', ':IMKit', ':CallKit', ':RCSticker',
         ':common_xfyun', ':common_tencentmonitor',
